--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             ><img src="./images/github_icon.svg" alt="GitHub" id="github-icon"
           /></a>
           <a
-            href="https://scholar.google.com.au/citations?user=NeEMSU0AAAAJ&hl=en"
+            href="https://scholar.google.com/citations?user=NeEMSU0AAAAJ&hl=en"
             target="_blank"
           >
             <img src="./images/googlescholar_icon.svg" alt="Google Scholar" />
