--- a/about.html
+++ b/about.html
@@ -18,25 +18,25 @@
         </div>
         <a href="/">Home</a>
         <a class="current-page" href="/about">About</a>
-        <a href="/foobar">FooBar</a>
+        <a href="/blog">Blog</a>
         <div class="icon-container">
           <a
             href="https://www.linkedin.com/in/lachlan-james-gibson/"
             class="icon-link"
             target="_blank"
-            ><img src="./images/linkedin_icon.svg" alt="LinkedIn"
+            ><img src="/images/linkedin_icon.svg" alt="LinkedIn"
           /></a>
           <a
             href="https://github.com/LachlanGibson"
             class="icon-link"
             target="_blank"
-            ><img src="./images/github_icon.svg" alt="GitHub" id="github-icon"
+            ><img src="/images/github_icon.svg" alt="GitHub" id="github-icon"
           /></a>
           <a
             href="https://scholar.google.com/citations?user=NeEMSU0AAAAJ&hl=en"
             target="_blank"
           >
-            <img src="./images/googlescholar_icon.svg" alt="Google Scholar" />
+            <img src="/images/googlescholar_icon.svg" alt="Google Scholar" />
           </a>
         </div>
       </nav>
