--- a/about.html
+++ b/about.html
@@ -45,43 +45,53 @@
       <section>
         <h1>ChatGPT's Introduction to Lachlan</h1>
         <p>
-          Dr. Lachlan Gibson is an Australian citizen who has a diverse
-          educational background in physics, data science, and mathematics. He
-          completed his Doctor of Philosophy (Physics) from the University of
-          Queensland in 2019, where his research focused on hydrodynamic forces
-          in optical tweezers. He continued his academic pursuits with a Master
-          of Data Science from the University of Queensland in 2020, where he
-          worked on his capstone project, Categorical Vector Clustering, aimed
-          at revealing hidden features of votes and voters.<br />
+          Dr. Lachlan Gibson, an Australian citizen, is a scholar and researcher
+          in the field of Physics and Data Science. He began his educational
+          journey at the University of Queensland, where he pursued a dual
+          program of a Bachelor of Science and a Bachelor of Arts from 2011 to
+          2014 with extended majors in Physics and Mathematics respectively.
+          During his undergraduate years, Dr. Gibson was heavily involved in
+          research programs, including the Advanced Study Program in Science
+          (ASPinS), and was recognized by the UQ Summer Research Scholarship
+          Program for three consecutive years.<br />
           <br />
-          Dr. Gibson has had several work experiences in the field of research
-          and education. He worked as a Postdoctoral Research Fellow at the
-          University of Queensland from August 2020 to December 2022. During his
-          tenure, he was involved in rare-event simulation research and
-          reinforcement learning applied to AI safety, and environmental effects
-          on fishery risk and reinforcement learning methods for controlling
-          restless multi-armed bandits.<br />
+          His desire for continuous learning led him to attain his Bachelor of
+          Science (Honours) in 2015, achieving First Class Honours. His
+          dedication was evident through his participation in a Simulation Group
+          Internship, where he worked on simulations of the proposed Brisbane
+          BaT tunnel.<br />
           <br />
-          In addition to research, Dr. Gibson also has experience in academic
-          tutoring and peer-assisted learning. He has worked as an academic
-          tutor for the School of Mathematics and Physics at the University of
-          Queensland from 2016 to 2020, where he taught tutorials, practicals,
-          and contact classes for various courses. He has also worked as a Peer
-          Assistant Tutor and PASS Leader, where he consulted students in the
-          Science Learning Centre for physics and mathematics inquiries and
-          facilitated PASS classes for PHYS1002 Electromagnetism and Modern
-          Physics.<br />
+          Dr. Gibson further expanded his knowledge base by pursuing a Doctor of
+          Philosophy (Physics) from 2016 to 2019. His thesis focused on the
+          mathematical and computational modelling of fluid dynamics relevant to
+          optical-tweezers systems. He then added to his expertise by completing
+          a Masters of Data Science in 2020 with a capstone study project on
+          Categorical Vector Clustering.<br />
           <br />
-          Dr. Gibson has also been involved in various volunteer works,
-          including serving as an Assistant Secretary at Salisbury Baptist
-          Church from 2020 to 2022, working with the pastorate (secretary,
-          treasurer and senior pastor), and operating the sound system for
-          regular services, band practices, and live streams. He has also been a
-          Youth Leader at Salisbury Baptist Church from 2014 to 2017, where he
-          mentored and led high school students from the church and local
-          community, and a Winter SMADD Camp Leader at Scripture Union from 2011
-          to 2016, where he worked with a team of volunteers to run an annual
-          weeklong creative arts camp for high schoolers.<br />
+          Following his academic pursuits, Dr. Gibson embarked on a career as a
+          Postdoctoral Research Fellow at the University of Queensland from
+          August 2020 to December 2022. His work involved researching rare-event
+          simulation via generative neural networks and reinforcement learning
+          applied to AI safety. His research also delved into environmental
+          effects on fishery risk and reinforcement learning methods for
+          controlling restless multi-armed bandits. He also served as an
+          Academic Tutor from 2016 to 2020 for various Mathematics and Physics
+          courses, highlighting his commitment to educating others.<br />
+          <br />
+          Besides his professional accomplishments, Dr. Gibson has shown a
+          commendable spirit of volunteerism. He has taken on roles such as
+          Assistant Secretary and Sound Technician at Salisbury Baptist Church
+          from 2013 to 2022, providing administrative and technical support for
+          the organization. He has also volunteered as a Youth Leader, mentoring
+          high school students from the church and local community.
+          Additionally, he contributed to Scripture Union as a camp leader, and
+          as an English Conversation Club Volunteer Helper at UQ's Institute of
+          Continuing & TESOL Education.<br />
+          <br />
+          With his impressive educational qualifications, extensive research
+          experience, and a strong commitment to service, Dr. Lachlan Gibson
+          stands as an accomplished physicist and data scientist, dedicated to
+          advancing knowledge and improving the community.<br />
         </p>
       </section>
     </main>
